# OpenRetinaUI

./: README.md  app.py  model_params.md  pyproject.toml  upgrade.py
backend/: __init__.py
backend/dataio/: __init__.py  info.py  io.py  structure.py  transform.py
backend/model/: __init__.py  activations.py  cnn.py  cnn_3d.py  debug.py  ln.py  ln_3d.py  lnln.py  losses_2d.py  losses_3d.py  regularizers.py
backend/train/: __init__.py  search.py  search_utils.py  train.py  train_callbacks.py  trainer_utils.py
backend/utils/: __init__.py  global_settings.py
backend/viz/: __init__.py  evaluation.py  utils.py
backend/viz/plots/: __init__.py  compare.py  distribution.py  lsta.py  model_structure.py  prediction.py  response.py  scatter.py
frontend/: __init__.py  compare_page.py  data_io_page.py  dataloader_page.py  model_page.py  search_page.py  train_page.py  utils.py  visualizer_page.py
plots_ans/: convolutional_kernels.npy  evaluation_predictions_accuracies.npy  evaluation_predictions_reliabilities.npy  feature_weights.npy  spatial_masks.npy
ui/: compare_page.py  data_io_page.py  dataloader_page.py  global_settings.py  model_page.py  search_page.py  train_page.py  visualizer_page.py
utils/: activations.py  compare.py  data_io.py  ln.py  ln3d.py  lnln.py  model.py  model3d.py  search.py  train.py  train_callbacks.py  visualizer.py
