[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenRetinaUI"
version = "0.4.2"
description = "Open Retina UI project with dependency auto check"
authors = [{ name = "Flyingfish812" }]
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "torch",
    "optuna",
    "matplotlib",
    "pillow",
    "gradio",
    "pympler",
    "pyyaml",
    "torchinfo"
]
